--- a/elika-warehouse/views/tmpl/forgot-password.html
+++ b/elika-warehouse/views/tmpl/forgot-password.html
@@ -14,7 +14,7 @@
 			<form name="form" class="form-validation mt-20" novalidate>
 				
 				<div class="form-group">
-					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
+					<input type="email" class="form-control underline-input" minlength="6" maxlength="40" placeholder="Email Address" ng-model="user.email" required>
 				</div>
 				
 				<div class="form-group">
