--- a/elika-warehouse/views/tmpl/administrator/master-admin.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin.html
@@ -205,6 +205,7 @@
 											</div>
 										</md-card>										
 									</md-content>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
