--- a/views/tmpl/create-new-password.html
+++ b/views/tmpl/create-new-password.html
@@ -13,7 +13,7 @@
 			<form name="form" class="form-validation mt-20" novalidate ng-submit="submitNewPassword(user)">
 			
 				<div class="form-group">
-					<input type="password" class="form-control underline-input" placeholder="New password" ng-model="user.password" required>
+					<input type="password" minlength="8" maxlength="16" class="form-control underline-input" placeholder="New password" ng-model="user.password" required>
 				</div>
 				
 				<div class="form-group">
