--- a/views/header.html
+++ b/views/header.html
@@ -1,26 +1,20 @@
 <header class="clearfix">
 	<div class="branding">
-		<a class="brand" ng-if="!forSetup" ui-sref="app.admin.dashboard({facility_id:facility_id})">
-			<span><strong>Elika</strong> Access Systems</span>
-		</a>
-		<a class="brand" ng-if="forSetup">
+		<a class="brand" ui-sref="app.admin.dashboard({facility_id:facility_id})">
 			<span><strong>Elika</strong> Access Systems</span>
 		</a>
 	</div>
-
+	
 	<div class="mobmenu">
 		<a href="javascript:;" class="animated-arrow">
 			<span></span>
 		</a>
 	</div>
-
+	
 	<div class="topmenu pull-left">
 		<div class="branding">
-			<a class="brand" ng-if="!forSetup" ui-sref="app.admin.dashboard({facility_id:facility_id})">
-				<span><strong>Elika</strong> Access Systems</span>
-			</a>
-			<a class="brand" ng-if="forSetup">
-				<span><strong>Elika</strong> Access Systems</span>
+			<a class="brand" ui-sref="app.admin.dashboard({facility_id:facility_id})">
+				<span><strong>Elika</strong> Access System</span>
 			</a>
 		</div>
 		<ul class="nav-right list-inline headmenu">
@@ -36,17 +30,17 @@
 			<li ng-if="navbar_facilities_count == 1" class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" ui-sref="app.admin.facility.facility" uib-dropdown-toggle>Facilities </span>
 			</li> -->
-			<li class="dropdown" ng-if="!forSetup" uib-dropdown>
+			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" ui-sref="app.admin.facility.facility" uib-dropdown-toggle>Facilities </span>
 			</li>
-			<li class="dropdown" ng-if="!forSetup" uib-dropdown>
+			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Devices &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.device.devices">Primary Devices</a></li>
 					<!-- <li><a ui-sref="app.admin.device.dependent-devices">Dependent Devices</a></li> -->
 				</ul>
 			</li>
-			<li class="dropdown" ng-if="!forSetup" uib-dropdown>
+			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Users &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.user.users">Users</a></li>
@@ -55,14 +49,14 @@
 					<li><a ui-sref="app.admin.support.technician">Technician</a></li>
 				</ul>
 			</li>
-			<li class="dropdown" ng-if="!forSetup" uib-dropdown>
+			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Doors &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.door.doors">Doors</a></li>
 					<li><a ui-sref="app.admin.door.door-groups">Door Groups</a></li>
 				</ul>
 			</li>
-			<li class="dropdown" ng-if="!forSetup" uib-dropdown>
+			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Schedules &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.schedule.schedules">Schedules</a></li>
@@ -70,7 +64,7 @@
 					<li><a ui-sref="app.admin.schedule.holiday-schedules">Holiday Schedules</a></li>
 				</ul>
 			</li>
-			<li class="dropdown" ng-if="!forSetup" uib-dropdown>
+			<li class="dropdown" uib-dropdown>
 				<!-- <span class="dropdown-toggle" uib-dropdown-toggle>Administrator &nbsp;<fa name="angle-down"></fa></span> -->
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.administrator.roles">Roles</a></li>
@@ -78,7 +72,7 @@
 					<li><a ui-sref="app.admin.administrator.admin">Admin</a></li>
 				</ul>
 			</li>
-			<li class="dropdown" ng-if="!forSetup" uib-dropdown>
+			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Camera DVR &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.camera.camera-dvr">Live and Recorded Feeds</a></li>
@@ -88,13 +82,13 @@
 					<!--li><a ui-sref="app.admin.setup.eagle-eye-directory">Eagle Eye Directory</a></li-->
 				</ul>
 			</li>
-			<li ng-if="!forSetup"><a ui-sref="app.admin.activity"><span>Activity</span></a></li>
-			<li ng-if="!forSetup"><a ui-sref="app.admin.contact"><span>Contact Us</span></a></li>
-			<!-- <li><a href=""><span>Reports</span></a></li> -->
+			<li><a ui-sref="app.admin.activity"><span>Activity</span></a></li>
+			<li><a ui-sref="app.admin.contact"><span>Contact Us</span></a></li>
+			<!-- <li><a href=""><span>Reports</span></a></li> -->			
 		</ul>
-	</div>
-
-
+	</div> 
+	
+	
 	<ul class="nav-right pull-right list-inline headmenu">
 		<!-- <li class="dropdown messages" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
@@ -161,18 +155,16 @@
 				</div>
 			</div>
 		</li> -->
-
+		
 		<li class="dropdown nav-profile" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
 				<img src="images/avatar.jpg" alt="" class="img-circle size-30x30">
-				<span><span class="uname"><username></username></span>
-				<fa name="angle-down"></fa>
-				</span>
+				<span><span class="uname"><username></username></span> <fa name="angle-down"></fa></span>
 			</a>
 			<ul class="dropdown-menu pull-right panel panel-default animated littleFadeInDown" role="menu">
-				<li ng-if="!forSetup"><a ui-sref="app.admin.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
+				<li><a ui-sref="app.admin.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
 				<!-- <li><a ui-sref="app.admin.help.faqs"><i class="fa fa-question" aria-hidden="true"></i> Help and FAQ's</a></li> -->
-				<li ng-if="!forSetup"><a elika-faqs><i class="fa fa-question" aria-hidden="true"></i> Help and FAQ's</a></li>
+				<li ><a elika-faqs><i class="fa fa-question" aria-hidden="true"></i> Help and FAQ's</a></li>
 				<li><a logout-btn><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
 				<li class="version">Version 1.0.0</li>
 				<!-- logout-btn -->
@@ -181,24 +173,23 @@
 	</ul>
 </header>
 <script type="text/javascript">
-	$(document).ready(function () {
+	$(document).ready(function() {
 		var winw = $(window).width();
 		var winh = $(window).height();
-
-		$('.animated-arrow').click(function () {
+		
+		$('.animated-arrow').click(function(){
 			$(this).toggleClass('openmenu');
 			$(this).parent().siblings('.topmenu').toggleClass('openmmenu');
 			$('.page').toggleClass('bodyfix');
 			$('.view-container').toggleClass('bodygray');
 		});
-
-		$('#content, .topmenu .dropdown-menu > li > a, #header .topmenu .nav-right > li > a').click(function () {
+		
+		$('#content, .topmenu .dropdown-menu > li > a, #header .topmenu .nav-right > li > a').click(function(){
 			$('.view-container').removeClass('bodygray');
 			$('.animated-arrow').removeClass('openmenu');
 			$('.topmenu').removeClass('openmmenu');
 			$('.page').removeClass('bodyfix');
 		});
-
+		
 	});
-
 </script>
