--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -4,6 +4,7 @@
 		<div class="facility-view elika-facility-name"></div>
 	</div>
 	<div class="pagecontent">
+		<elika-wizard ng-if="showWizard" callback="wizardCompleted"></elika-wizard>
 		<div class="row">
 			<div class="card-container col-sm-8 col-md-6">
 				<div class="card">
