--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -1,5 +1,6 @@
 <div class="wizpopup">
-    <div class="page page-core submitwizard">
+    <span class="pop-out"><i class="fa fa-sign-out" aria-hidden="true"></i></span>
+    <div class="submitwizard">
         <div class="submit_wizard login-box-shadow borderradius6">
             <wizard on-finish="submitWizard()">
 
