--- a/elika-warehouse/styles/custom.css
+++ b/elika-warehouse/styles/custom.css
@@ -1817,6 +1817,10 @@ span.devicecamname {
     bottom: 0;
 }
 
+.modal-open .appWrapper.header-fixed #header {
+	right: 17px;
+}
+
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     .profilephoto #profilep-1,
     .profilephoto #profilep-2 {
