--- a/styles/custom.css
+++ b/styles/custom.css
@@ -3092,12 +3092,8 @@ span.edittxt {
     font-weight: 400!important;
 }
 
-.hometabs .md-tab {
-	pointer-events: auto!important;
-}
-
 .wizpopup {
-	position: absolute;
+	position: fixed;
     z-index: 99999;
     background: rgba(0,0,0,0.75);
     width: 100%;
@@ -3117,7 +3113,9 @@ span.edittxt {
     cursor: pointer;
 }
 
-
+.modal-open .appWrapper.header-fixed #header {
+	right: 17px;
+}
 
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
