--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -1,5 +1,5 @@
 <div class="wizpopup">
-    <span class="pop-out"><i class="fa fa-sign-out" aria-hidden="true"></i></span>
+    <span class="pop-out" logout-btn><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</span>
     <div class="submitwizard">
         <div class="submit_wizard login-box-shadow borderradius6">
             <wizard on-finish="submitWizard()">
