--- a/views/tmpl/app.html
+++ b/views/tmpl/app.html
@@ -1,6 +1,6 @@
 <!-- <section ng-include="'views/header.html'" id="header" class="{{main.settings.navbarHeaderColor}}"></section> -->
 <elika-header id="header"></elika-header>
-<elika-wizard ng-if="showWizard" callback="wizardCompleted"></elika-wizard>
+<elika-wizard ng-if="showWizard" callback="wizardCompleted()"></elika-wizard>
 <!--div id="controls">
 	<aside ng-include="'views/nav.html'" id="sidebar" class="{{main.settings.sidebarColor}}" ng-class="{'aside-fixed':main.settings.asideFixed}"></aside>
 </div-->
