--- a/views/tmpl/forgot-password.html
+++ b/views/tmpl/forgot-password.html
@@ -14,11 +14,35 @@
 			<form name="form" class="form-validation mt-20" ng-submit="submitForgetPassword(user)" novalidate>
 				
 				<div class="form-group">
-					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
+					<input type="email" name="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
+				</div>
+				<div class="row text-left" >					
+					<div class="col-sm-12 col-md-6">
+						<label class="checkbox checkbox-custom-alt ml-0 mb-0" ng-click="visibiltyUserGroup=true" ng-init="user.type='otp'">
+							<input name="customRadioAlt" type="radio" ng-model="user.type" value="otp" ><i></i> OTP
+						</label>
+					</div>
+					<div class="col-sm-12 col-md-6">
+						<label class="checkbox checkbox-custom-alt mb-0" ng-click="visibiltyUserGroup=false">
+							<input name="customRadioAlt" type="radio" ng-model="user.type" value="secret_ques"><i></i> Security Question
+						</label>
+					</div>
+				</div>
+				<div class="row mt-20">
+					<div class="col-sm-12 col-md-12 mt-10" ng-init="visibiltyUserGroup=true" ng-hide="visibiltyUserGroup">
+						<div class="form-group">
+							<select id="selectedQuestion1" name="selectedQuestion1" class="form-control underline-input mb-20" ng-model="user.secret_ques_id" ng-options="q.sq_id as q.sq_question for q in questionsList">
+								<option value="">Select Secret Question</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control underline-input" placeholder="Answer" ng-model="user.answer" required>
+						</div>
+					</div>
 				</div>
 				
 				<div class="form-group text-left mt-20">  
-					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-disabled='form.$invalid'>Submit</button>
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-disabled="visibiltyUserGroup ? form.user.email.$valid : form.$invalid" >Submit</button>
 				</div>
 			</form>
 			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
