--- a/views/tmpl/admin/schedule/holiday-schedules.html
+++ b/views/tmpl/admin/schedule/holiday-schedules.html
@@ -94,7 +94,7 @@
 																		<label class="btn btn-default" ng-model="addHolidayScheduleObj.hs_status" uib-btn-radio="'0'" style="padding:12px 20px">Inactive</label>
 																	</div>
 																</div>
-																<div class="col-md-6">
+																<!-- <div class="col-md-6">
 																	<div ng-controller="DatepickerDemoCtrl">
 																		<label for="">Expiration Date <span class="text-danger">*</span></label>
 																		<div class="input-group">
@@ -108,7 +108,7 @@
 																		</span>
 																		</div>
 																	</div>
-																</div>
+																</div> -->
 															</div>
 														</div>
 													</div>
@@ -272,7 +272,7 @@
 																					<label class="btn btn-default" ng-model="editHolidayScheduleObj.hs_status" uib-btn-radio="'0'" style="padding:12px 20px">Inactive</label>
 																				</div>
 																			</div>
-																			<div class="col-md-6" ng-hide="radioModel=='Inactive'">
+																			<!-- <div class="col-md-6" ng-hide="radioModel=='Inactive'">
 																				<div ng-controller="DatepickerDemoCtrl">
 																					<label for="">Expiration Date <span class="text-danger">*</span></label>
 																					<div class="input-group">
@@ -284,7 +284,7 @@
 																						</span>
 																					</div>
 																				</div>
-																			</div>
+																			</div> -->
 																		</div>
 																	</div>
 																</div>
