--- a/styles/custom.css
+++ b/styles/custom.css
@@ -3063,8 +3063,8 @@ span.edittxt {
 .submit_wizard {
 	position: relative;
 	background: #ffffff;
-	width: 80%;
-	margin:5% auto;
+	width: 75%;
+    margin: 2.5% auto;
 }
 
 .submit_wizard h2.ng-binding {
@@ -3095,7 +3095,7 @@ span.edittxt {
 .wizpopup {
 	position: fixed;
     z-index: 99999;
-    background: rgba(0,0,0,0.75);
+    background: rgba(0,0,0,0.8);
     width: 100%;
     height: 100%;
     padding: 5%;
@@ -3106,7 +3106,7 @@ span.edittxt {
 .pop-out {
 	position: absolute;
     top: 20px;
-    right: 35px;
+    right: 45px;
     color: #fff;
     font-size: 15px;
     font-weight: 400;
@@ -3117,6 +3117,13 @@ span.edittxt {
 	right: 17px;
 }
 
+.hometabs .md-tab {
+	pointer-events: auto!important;
+}
+
+.btn-numbers .btn {
+	padding: 8px 14px;
+}
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     .profilephoto #profilep-1,
