--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -70,16 +70,8 @@
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Time Zone <span class="text-danger">*</span></label>
 												<!-- <input type="text" class="form-control" ng-model="facility.facility_timezone"> -->
-												<select class="form-control" ng-model="facility.facility_timezone">
-													<option>USA (Alaska)</option>
-													<option>USA (Samoa)</option>
-													<option>USA (Pacific)</option>
-													<option>USA (Eastern)</option>
-													<option>USA (Hawaii-Aleutian)</option>
-													<option>USA (Mountain)</option>
-													<option>USA (Atlantic)</option>
-													<option>USA (Central)</option>
-													<option>USA (Chamorro)</option>
+												<select class="form-control" ng-model="facility.facility_timezone" ng-options="tz.name as tz.name for tz in usTimeZonesForFacility">
+													<option value="">Select</option>
 												</select>
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
